--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ extras =
     min-pydantic,pydantic1,pydantic,min-extra,extra,extra-pydantic1: pydantic
     min-scrapy,scrapy,min-extra,extra,extra-pydantic1: scrapy
 commands =
-    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
+    pytest -vv --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
 
 [testenv:docs]
 deps =
@@ -28,7 +28,7 @@ extras =
     pydantic
     scrapy
 commands =
-    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs:README.md}
+    pytest -vv --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs:README.md}
 
 [testenv:typing]
 basepython = python3
